<resources>
    <string name="app_name">Green</string>
    <string name="mainbuttonregister">Crear Cuenta</string>
    <string name="mainbuttonlogin">Iniciar Sesión</string>
    <string name="titulo_logo">GreenCity</string>
    <string name="notaregistro">¿Ya tiene una cuenta?</string>
    <string name="pasealogin">Iniciar Sesión</string>
    <string name="pasearegistro">Registrarse</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur, adipiscing elit neque himenaeos vehicula, gravida maecenas eros inceptos. Lacus nascetur venenatis non metus blandit sodales taciti viverra rhoncus, nisi eleifend parturient nisl nullam curae ornare dapibus, quam nunc nulla id quis odio auctor ullamcorper. Eu fusce imperdiet feugiat euismod potenti vehicula dapibus enim cum penatibus tincidunt eget aliquet tristique lacinia sem, vel at volutpat dictumst bibendum lectus magna in quis conubia dictum dis est ullamcorper.Lorem ipsum dolor sit amet consectetur, adipiscing elit neque himenaeos vehicula, gravida maecenas eros inceptos. Lacus nascetur venenatis non metus blandit sodales taciti viverra rhoncus, nisi eleifend parturient nisl nullam curae ornare dapibus, quam nunc nulla id quis odio auctor ullamcorper. Eu fusce imperdiet feugiat euismod potenti vehicula dapibus enim cum penatibus tincidunt eget aliquet tristique lacinia sem, vel at volutpat dictumst bibendum lectus magna in quis conubia dictum dis est ullamcorper.</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recojo_fragment">Hello recojo fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_maps1">Map</string>
    <string name="marker_detail_latlng">(%1$.2f, %2$.2f)</string>

    <string name="fotoRecolector">Foto</string>
    <string name="receptor">Receptor</string>
    <string name="estado">Estado</string>
    <string name="emisor">Emisor</string>
    <string name="fecha">Fecha</string>

    <string name="enEspera">En espera</string>
    <string name="recolector">Recolector</string>
    <string name="NombreVecino">Jose Miguel</string>
    <string name="vecino">Vecino</string>
    <string name="detalleRecojo">Detalle Recojo</string>
    <string name="DatosRecolector">Datos Recolector</string>
    <string name="fechadia">09/09/2019</string>
    <string name="fechahora">14:07</string>
    <string name="title_activity_maps2">Map</string>
    <string name="default_notification_channel_id">default_channel</string>

    <!-- Strings related to login -->
    <string name="prompt_user_id">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_user_id">Correo inválido</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_server">Error en el servidor</string>
    <string name="error_incorrect_user_id">Correo no registrado</string>
    <string name="error_network">Conexión de red no disponible</string>
    <string name="error_invalid_password">Contraseña inválida</string>


</resources>
