<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="70dp"
        android:text="@string/titulo_logo"
        android:textSize="48sp"
        android:fontFamily="@font/podkova"

        android:textColor="@color/colorAccent"

        />

    <Button
        android:layout_width="289dp"
        android:layout_height="41dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/botonrectangular1"
        android:fontFamily="@font/podkova"
        android:textSize="28sp"
        android:text="@string/mainbuttonregister"
        android:textColor="@color/colortextcontrast"
        android:id="@+id/Registro"
        android:onClick="registro"
        />

    <Button
        android:layout_width="289dp"
        android:layout_height="41dp"
        android:layout_marginTop="510dp"
        android:layout_marginLeft="38dp"
        android:background="@drawable/botonrectangular2"
        android:fontFamily="@font/podkova"
        android:textSize="28sp"
        android:text="@string/mainbuttonlogin"
        android:textColor="@color/colortextcontrast"
        android:id="@+id/login"
        android:onClick="login"
        />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:src="@drawable/main_logo"/>



</RelativeLayout>