<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.greencity.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:src="@drawable/main_logo"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="300dp"
        android:hint="Correo Electrónico"
        android:id="@+id/correo"

        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="350dp"
        android:hint="Contraseña"
        android:password="true"
        android:id="@+id/contrasena"
        />


    <Button
        android:layout_width="289dp"
        android:layout_height="41dp"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="38dp"
        android:background="@drawable/botonrectangular2"
        android:fontFamily="@font/podkova"
        android:textSize="28sp"
        android:text="@string/mainbuttonlogin"
        android:textColor="@color/colortextcontrast"
        android:id="@+id/iniciarSesion"
        />
    <!--android:onClick="sesion"-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="30dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notaregistro"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pasearegistro"
            android:textColor="@color/colorAccent"
            />
        <!--android:onClick="registro"-->

    </LinearLayout>



</RelativeLayout>
