<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.greencity.RegisterActivity">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:src="@drawable/main_logo"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        >
        <EditText
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:hint="Nombres"

            />


        <EditText
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="210dp"
            android:hint="Apellidos"
            />


        <EditText
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:hint="Telefono"

            />

        <Spinner
            android:id="@+id/tipousuario"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="50dp"
            >

        </Spinner>
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"
            android:hint="Dirección"

            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="150dp"
            android:hint="Correo Electrónico"

            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="200dp"
            android:hint="Contraseña"
            android:password="true"
            />

    </RelativeLayout>


    <Button
        android:layout_width="289dp"
        android:layout_height="41dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="510dp"
        android:background="@drawable/botonrectangular1"
        android:fontFamily="@font/podkova"
        android:textSize="28sp"
        android:text="@string/mainbuttonregister"
        android:textColor="@color/colortextcontrast" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="30dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notaregistro"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/pasealogin"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>

</RelativeLayout>
